bk_ida/gccida/c1/df_reg_use_gen
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_reg_use_gen/src/df.c:1101:30: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( USE, ( machine_mode)*( ( unsigned __int8 *)v1 + 2), v1); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/df_reg_use_gen/src/obj/df.o] Error 1
